    Thanks to Mike Hommey for the idea. Closes: #554689
  * Add new option --print-format to dpkg-source to be able to know by advance
    the source format that would be used during a build.
  * Modify dpkg-source -b to use default build options from
    debian/source/options. Thus it's now possible to have sticky options, for
    example for the choice of a compression method (-Z<comp>).
  * dpkg-source -x outputs the list of upstream files modified by the diff.gz
    (applies only to source packages using format 1.0). Closes: #482166

  [ Updated dpkg translations ]
  * Czech (Miroslav Kure).
  * German (Sven Joachim).
  * Italian (Milo Casagrande). Closes: #548615
  * Polish (Wiktor Wandachowicz). Closes: #548541
  * Swedish (Peter Krefting).
  * French (Christian Perrier).

  [ Updated dselect translations ]
  * Czech (Miroslav Kure).
  * German (Sven Joachim).
  * Polish (Wiktor Wandachowicz). Closes: #548541
  * Swedish (Peter Krefting).
  * French (Christian Perrier).

  [ Updated man page translations ]
  * French translation error fixed (Christian Perrier)
    Thanks to Pietro Battiston for spotting it
    Closes: #545446
  * German (Helge Kreutzmann).
  * Polish (Wiktor Wandachowicz). Closes: #548541
  * Swedish (Peter Krefting).
  * French (Christian Perrier).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Polish (Wiktor Wandachowicz). Closes: #548541
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Sun, 06 Sep 2009 09:48:45 +0200

dpkg (1.15.4) unstable; urgency=low

  [ Guillem Jover ]
  * Call _g instead of g_ in dpkg-name.
  * Fix inverted logic when deciding to assume the architecture in dpkg-name
    when the package didn't have such field.
  * Do not take into account Revision and Package_Revision fields in dpkg-name
    and dpkg-scanpackages as they have been handled already by “dpkg-deb -I”.
  * Switch dpkg-scansources to use Dpkg::Cdata instead of duplicating the