@@ -81,8 +81,10 @@ dpkg (1.15.5) UNRELEASED; urgency=low
   * Modify dpkg-source -b to use default build options from
     debian/source/options. Thus it's now possible to have sticky options, for
     example for the choice of a compression method (-Z<comp>).
-  * dpkg-source -x outputs the list of upstream files modified by the diff.gz
+  * dpkg-source outputs the list of upstream files modified by the diff.gz
     (applies only to source packages using format 1.0). Closes: #482166
+    It also recommends usage of 3.0 (quilt) format during dpkg-source -b if it
+    detects changes to upstream files that are stored in the .diff.gz.
 
   [ Updated dpkg translations ]
   * Czech (Miroslav Kure).
